--- a/app/components/App/App.css
+++ b/app/components/App/App.css
@@ -1,3 +1,10 @@
-h1{
-  color: red;
+.flex {
+	display: flex;
+}
+
+.flex.center {
+	align-items: center;
+}
+.flex.end {
+	justify-content: space-between;
 }
